<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/sportsImageDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/sports_image_description" />

        <TextView
            android:id="@+id/titleDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/sportsImageDetail"
            android:padding="16dp"
            android:text="@string/title_placeholder"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            style="@style/SportsTitle"/>

        <TextView
            android:id="@+id/subTitleDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sportsImageDetail"
            android:padding="16dp"
            android:text="@string/sports_detail_text"
            android:textColor="?android:textColorSecondary"
            android:textSize="16sp"
            android:lineSpacingExtra="4dp"
            style="@style/SportsDetailText" />

    </RelativeLayout>

</ScrollView>

